@@ -52,10 +52,10 @@ sub test_cascade {
     ok( $cascade->{stats}{recompute} == 2 && $recomputed == 2, 'recompute stats - 2');
 
     is_deeply( $cascade->run('one_page_1'), [ 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ], '1th page from cache');
-    ok( $cascade->{stats}{recompute} == 3, 'recompute stats - 3');
+    cmp_ok( $cascade->{stats}{recompute}, '==', 3, 'recompute stats - 3');
 
     is_deeply( $cascade->run('one_page_0'), [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ], '0th page from cache');
-    ok( $cascade->{stats}{recompute} == 3, 'recompute stats - 4');
+    cmp_ok( $cascade->{stats}{recompute}, '==', 3, 'recompute stats - 4');
 
     sleep 1;
 
